Added artifact-sharing client

--- a/Artifact-Sharing-Client-Notebook.ipynb
+++ b/Artifact-Sharing-Client-Notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "\n",
     "from Crypto.PublicKey import RSA\n",
     "from Crypto.Cipher import AES\n",
-    "from Crypto.Cipher import PKCS1_v1_5\n",
+    "from Crypto.Cipher import PKCS1_v1_5 as pkcs_cipher\n",
+    "from Crypto.Signature import PKCS1_v1_5 as pkcs_signature\n",
     "\n",
     "from base64 import b64decode, urlsafe_b64decode, b64encode, urlsafe_b64encode\n",
     "from Crypto.Hash import SHA256"
@@ -31,14 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -97,19 +91,24 @@
      "text": [
       "{\n",
       "  \"type\": \"artifact\",\n",
-      "  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\"\n",
+      "  \"spec_version\": \"2.1\",\n",
+      "  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\",\n",
+      "  \"mime_type\": \"application/zip\",\n",
+      "  \"payload_bin\": \"ZX7HIBWPQA99NSUhEUgAAADI== ...\",\n",
+      "  \"encryption_algorithm\": \"mime-type-indicated\",\n",
+      "  \"decryption_key\": \"My voice is my passport\"\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "artifact_json = json.loads(post_artifact)\n",
     "print(json.dumps(artifact_json, indent=2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +148,7 @@
        "'{\"status_code\":200,\"reason\":\"OK\"}'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +168,7 @@
        "'{  \"type\": \"artifact\",  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\"}'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +211,7 @@
       "send: b'{  \"type\": \"artifact\",  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\"}'\n",
       "reply: 'HTTP/1.1 200 OK\\r\\n'\n",
       "header: content-type: application/json\n",
-      "header: content-length: 1264\n"
+      "header: content-length: 1262\n"
      ]
     },
     {
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +239,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,16 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\\n  \"id\" : \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\",\\n  \"iv\" : \"uF7pRFw1jNnq8DN9PKOYFQ==\",\\n  \"encrypted_key\" : \"WVe-Kg6FPLn0K9vvMJvh-n6c3WR1Uxqb9Hr9C0CFtVyAdLsWu3-qBu1C5Lw2O_eZ6uIdJd-B1Qcb6dfoStRVoFybaSM9GFomUnRqSuj5DhmbMCp8V74XmbVOxNej-jdyJ8Csm-6tLu4VYBNdCZ3eWSlx_5vnqwx_cqCw47v3m-U6YIiYDNcimS9aZ_27K1tneT30uO0gQHOVfSNimrDJ0WlXajMeF6-Slk7snw0UGz_WiBzmdXDaUCmFTxWbbKMmJvtA-8WmduTVjIglR3bTCa5Qsan9o8m6VIejigvIY306U8ZZ5duWxtpUdDUzOA2yFhMHH_C4UosAzsrf6BJazw==\",\\n  \"encrypted\" : \"hYYVdW7vw15Ec4uCjXt42y-seIc-D0v3jotCSWXIOBF5_gLQnJTCyP6R1hMvdmlgf71VqJxLvjoaReqLUls4NVc7G0pEWR7jMw-W91zsElnr7eZQdreaAKSiaNckfl5HyqqoKFte_An5Lv30T8GXELBphSeASExN4nldZY402lYqOClHEk8IWM_f9MraCYk44-QvVAaDf33VoTK6d19Xdmkijbqb6le2c6WeVikz-Tiln9TAIooGZD0_PF0Aas339f7g7ClSVO0oSjRfRXK5JPNoJfslLgPThEiDJBpt07pWmxyUHfpGBz2U4CAlCAZTXVCn0sesAbpUwECQmuefjvjcssXqVceoUlsUudt_PZ1oaFPpTc1RbM1EFSYaB_MJ9jpu8Elnryc=\",\\n  \"signature\" : \"KRV1v4-AjpTHfE-aVLWc3B5HVmJOhtvfB390GPu2sxcuc4gF9mtHqd1DHXwuC0Z7mj8scbUnfEAUffK0z0hPeM80_95rYKODQvaSCMJttfaflWGCySvmGIAznaWrBB0Hj-Y7tfpM6IOz3iOxbKY9L5je5jrtBH_HnrQKcx7TJgJl0IUGJ8MDl0qM20F4owb7rPZX4jnUxvzFnTp7ClN1TLCopdHFudv9-YJuyW10kQWNyuxm96GH4NtEXotToG4T6d86OTJMr0exKasSeBpQLohE1E9LnPKflvwWYxmHHLQY-XbAA47l_1N8xoIEodUA3UPQoO5Z2KyDkOTgWdbkTA==\",\\n  \"length\" : 280\\n}'"
+       "'{\\n  \"id\" : \"bundle--6f437177-6e48-5cf8-9d9e-872a2bddd641\",\\n  \"iv\" : \"u_m6dz0woczy5NbTais97g==\",\\n  \"encrypted_key\" : \"YjFu-QXejLoCDzrMi_xHf6FNKFZlZkjdj-R_zGEBiuqRTgNbNa7r1aop4LbqQ78HJ6CzqKpgIhfjvR8vc8RmbvLoo_c7NCV6vgGsgVn9kW1Zp6d6ntGYtSPX20tomPFQYEviIHnlKSXKss-VjmuaYQRlv13U4brVOkfA2zDJZOg8QRKXpNYv_Qq2xuY7HVq8GtgGptAwukGCr4CJOc57vxQr2e5ykHob9PG-v7bZha8O7FqSSzwetJ7Kd-5ds5TWwA65U-czXuRMxDFKC3cVEiwHuI93mxa_s0SJjIPiQLDlUUuMjgXuTWBIgaC4vpvw9ppbpt2FLr6hTQC3Oma8BA==\",\\n  \"encrypted\" : \"FVfKilhybKa3UPFQ2EWmEbd8bVGBb-_Hp5klsJI6A4sTLhp8L_Q0NdPlGFr1dh5NO_KBZ8Gg4vTwL5NyIxqd1xLO2lQ-aQn6e191XHQuVNmSIlL_mwUNrdXGxanaBRUmIBtURHoShVxcTo27N5qtnedauQWDOi9DlwNSOaeScGQfw7_2eYEzMJpZxtlFN3NNMFriY-4aNqVb9vJyYnAA-NgLu7Tv5mLS9R-1uNpuObOeHS57oR3Mmxn3RQa_U5QfbqRQMDMz0iv6wiUsSUNvKopfgeFDKKMQeZPTeFtuqgGBPUp8Xvc9BSDbAdVxqC2DFH_nWpc_VZvGr20hMJTUevwB43O4-p0WkfVKY4oOaCeLZIL19QFl464YAg4bCnHlGXyehe5Fnrw=\",\\n  \"signature\" : \"KRV1v4-AjpTHfE-aVLWc3B5HVmJOhtvfB390GPu2sxcuc4gF9mtHqd1DHXwuC0Z7mj8scbUnfEAUffK0z0hPeM80_95rYKODQvaSCMJttfaflWGCySvmGIAznaWrBB0Hj-Y7tfpM6IOz3iOxbKY9L5je5jrtBH_HnrQKcx7TJgJl0IUGJ8MDl0qM20F4owb7rPZX4jnUxvzFnTp7ClN1TLCopdHFudv9-YJuyW10kQWNyuxm96GH4NtEXotToG4T6d86OTJMr0exKasSeBpQLohE1E9LnPKflvwWYxmHHLQY-XbAA47l_1N8xoIEodUA3UPQoO5Z2KyDkOTgWdbkTA==\",\\n  \"length\" : 280\\n}'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -279,10 +278,10 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\",\n",
-      "  \"iv\": \"uF7pRFw1jNnq8DN9PKOYFQ==\",\n",
-      "  \"encrypted_key\": \"WVe-Kg6FPLn0K9vvMJvh-n6c3WR1Uxqb9Hr9C0CFtVyAdLsWu3-qBu1C5Lw2O_eZ6uIdJd-B1Qcb6dfoStRVoFybaSM9GFomUnRqSuj5DhmbMCp8V74XmbVOxNej-jdyJ8Csm-6tLu4VYBNdCZ3eWSlx_5vnqwx_cqCw47v3m-U6YIiYDNcimS9aZ_27K1tneT30uO0gQHOVfSNimrDJ0WlXajMeF6-Slk7snw0UGz_WiBzmdXDaUCmFTxWbbKMmJvtA-8WmduTVjIglR3bTCa5Qsan9o8m6VIejigvIY306U8ZZ5duWxtpUdDUzOA2yFhMHH_C4UosAzsrf6BJazw==\",\n",
-      "  \"encrypted\": \"hYYVdW7vw15Ec4uCjXt42y-seIc-D0v3jotCSWXIOBF5_gLQnJTCyP6R1hMvdmlgf71VqJxLvjoaReqLUls4NVc7G0pEWR7jMw-W91zsElnr7eZQdreaAKSiaNckfl5HyqqoKFte_An5Lv30T8GXELBphSeASExN4nldZY402lYqOClHEk8IWM_f9MraCYk44-QvVAaDf33VoTK6d19Xdmkijbqb6le2c6WeVikz-Tiln9TAIooGZD0_PF0Aas339f7g7ClSVO0oSjRfRXK5JPNoJfslLgPThEiDJBpt07pWmxyUHfpGBz2U4CAlCAZTXVCn0sesAbpUwECQmuefjvjcssXqVceoUlsUudt_PZ1oaFPpTc1RbM1EFSYaB_MJ9jpu8Elnryc=\",\n",
+      "  \"id\": \"bundle--6f437177-6e48-5cf8-9d9e-872a2bddd641\",\n",
+      "  \"iv\": \"u_m6dz0woczy5NbTais97g==\",\n",
+      "  \"encrypted_key\": \"YjFu-QXejLoCDzrMi_xHf6FNKFZlZkjdj-R_zGEBiuqRTgNbNa7r1aop4LbqQ78HJ6CzqKpgIhfjvR8vc8RmbvLoo_c7NCV6vgGsgVn9kW1Zp6d6ntGYtSPX20tomPFQYEviIHnlKSXKss-VjmuaYQRlv13U4brVOkfA2zDJZOg8QRKXpNYv_Qq2xuY7HVq8GtgGptAwukGCr4CJOc57vxQr2e5ykHob9PG-v7bZha8O7FqSSzwetJ7Kd-5ds5TWwA65U-czXuRMxDFKC3cVEiwHuI93mxa_s0SJjIPiQLDlUUuMjgXuTWBIgaC4vpvw9ppbpt2FLr6hTQC3Oma8BA==\",\n",
+      "  \"encrypted\": \"FVfKilhybKa3UPFQ2EWmEbd8bVGBb-_Hp5klsJI6A4sTLhp8L_Q0NdPlGFr1dh5NO_KBZ8Gg4vTwL5NyIxqd1xLO2lQ-aQn6e191XHQuVNmSIlL_mwUNrdXGxanaBRUmIBtURHoShVxcTo27N5qtnedauQWDOi9DlwNSOaeScGQfw7_2eYEzMJpZxtlFN3NNMFriY-4aNqVb9vJyYnAA-NgLu7Tv5mLS9R-1uNpuObOeHS57oR3Mmxn3RQa_U5QfbqRQMDMz0iv6wiUsSUNvKopfgeFDKKMQeZPTeFtuqgGBPUp8Xvc9BSDbAdVxqC2DFH_nWpc_VZvGr20hMJTUevwB43O4-p0WkfVKY4oOaCeLZIL19QFl464YAg4bCnHlGXyehe5Fnrw=\",\n",
       "  \"signature\": \"KRV1v4-AjpTHfE-aVLWc3B5HVmJOhtvfB390GPu2sxcuc4gF9mtHqd1DHXwuC0Z7mj8scbUnfEAUffK0z0hPeM80_95rYKODQvaSCMJttfaflWGCySvmGIAznaWrBB0Hj-Y7tfpM6IOz3iOxbKY9L5je5jrtBH_HnrQKcx7TJgJl0IUGJ8MDl0qM20F4owb7rPZX4jnUxvzFnTp7ClN1TLCopdHFudv9-YJuyW10kQWNyuxm96GH4NtEXotToG4T6d86OTJMr0exKasSeBpQLohE1E9LnPKflvwWYxmHHLQY-XbAA47l_1N8xoIEodUA3UPQoO5Z2KyDkOTgWdbkTA==\",\n",
       "  \"length\": 280\n",
       "}\n"
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -311,9 +310,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "encrypted one-time key:  WVe-Kg6FPLn0K9vvMJvh-n6c3WR1Uxqb9Hr9C0CFtVyAdLsWu3-qBu1C5Lw2O_eZ6uIdJd-B1Qcb6dfoStRVoFybaSM9GFomUnRqSuj5DhmbMCp8V74XmbVOxNej-jdyJ8Csm-6tLu4VYBNdCZ3eWSlx_5vnqwx_cqCw47v3m-U6YIiYDNcimS9aZ_27K1tneT30uO0gQHOVfSNimrDJ0WlXajMeF6-Slk7snw0UGz_WiBzmdXDaUCmFTxWbbKMmJvtA-8WmduTVjIglR3bTCa5Qsan9o8m6VIejigvIY306U8ZZ5duWxtpUdDUzOA2yFhMHH_C4UosAzsrf6BJazw==\n",
+      "encrypted one-time key:  YjFu-QXejLoCDzrMi_xHf6FNKFZlZkjdj-R_zGEBiuqRTgNbNa7r1aop4LbqQ78HJ6CzqKpgIhfjvR8vc8RmbvLoo_c7NCV6vgGsgVn9kW1Zp6d6ntGYtSPX20tomPFQYEviIHnlKSXKss-VjmuaYQRlv13U4brVOkfA2zDJZOg8QRKXpNYv_Qq2xuY7HVq8GtgGptAwukGCr4CJOc57vxQr2e5ykHob9PG-v7bZha8O7FqSSzwetJ7Kd-5ds5TWwA65U-czXuRMxDFKC3cVEiwHuI93mxa_s0SJjIPiQLDlUUuMjgXuTWBIgaC4vpvw9ppbpt2FLr6hTQC3Oma8BA==\n",
       "\n",
-      "decoded encrypted one-time key:  b'YW\\x8a\\x83\\xa1O.}\\n\\xf6\\xfb\\xcc&\\xf8g\\xe9\\xcd\\xd6GU1\\xa9\\xbfG\\xaf\\xd0\\xb4\\x08[U\\xc8\\x07K\\xb1k\\xb7\\xa8\\x1b\\xb5\\x0b\\x92\\xf0\\xd8\\xe7\\x99\\xea\\xe2\\x1d%\\xd0uA\\xc6\\xfau\\xfa\\x12\\xb5\\x15h\\x17&\\xdaH\\xcfF\\x16\\x89\\x94\\x9d\\x1a\\x92\\xba>C\\x86f\\xcc\\n\\x9f\\x15\\xef\\x85\\xe6mS\\xb15\\xe8\\xe3w\"|\\n\\xc9\\xba\\xb4\\xbb\\xb8U\\x80Mt&wyd\\xa5\\xc7\\x9b\\xe7\\xab\\x0c\\\\\\xa8,8\\xee\\xfd\\xe6S\\xa6\\x08\\x89\\x80\\xcdr)\\x92\\xf5\\xa6v\\xec\\xadm\\x9d\\xe4\\xf7\\xd2\\xe3\\xb4\\x81\\x01\\xceU\\xf4\\x8d\\x8aj\\xc3\\'E\\xa5]\\xa8\\xccx^\\x92\\x96N\\xec\\x9f\\r\\x14\\x1b5\\xa2\\x079\\x9d\\\\6\\x94\\naS\\xc5f\\xdb(\\xc9\\x89\\xbe\\xd0<ZgnMX\\xc8\\x82Twm0\\x9a\\xe5\\x0b\\x1a\\x9f\\xda<\\x9b\\xa5Hz8\\xa0\\xbc\\x867\\xd3\\xa5<e\\x9e]\\xb9lm\\xa5GCS3\\x80\\xdb!a0q\\xc2\\xe1J,\\x03;+\\x7f\\xa0Ik<'\n"
+      "decoded encrypted one-time key:  b'b1nAw\\xa3.\\x80\\x83\\xce\\xb3\"\\xc4w\\xfa\\x14\\xd2\\x85fVd\\x8d\\xd8\\xd1\\xcca\\x01\\x8a\\xea\\x91N\\x03[5\\xae\\xeb\\xd5\\xaa)\\xe0\\xb6\\xeaC\\xbf\\x07\\'\\xa0\\xb3\\xa8\\xaa`\"\\x17\\xe3\\xbd\\x1f/s\\xc4fn\\xf2\\xe8\\xa1\\xce\\xcd\\t^\\xaf\\x80k V\\x7fd[Vi\\xe9\\xde\\xa7\\xb4f-H\\xf5\\xf6\\xd2\\xda&<T\\x18\\x12\\xf8\\x88\\x1eyJIr\\xac\\xb1X\\xe6\\xb9\\xa6\\x10F[\\xf5\\xddN\\x1b\\xadS\\xa4|\\r\\xb3\\x0c\\x96N\\x83\\xc4\\x11)zMb\\xf4*\\xdb\\x1b\\x98\\xecuj\\xf0k`\\x1a\\x9b@\\xc2\\xe9\\x06\\n\\xbe\\x02$\\xe79\\xee\\xfcP\\xafg\\xb9\\xcaA\\xe8o\\xd3\\xc6\\xbf\\xb6\\xd9\\x85\\xaf\\x0e\\xecZ\\x92K<\\x1e\\xb4\\x9e\\xcaw\\x97l\\xe55\\xb0\\x03\\xaeTs5\\xeeD\\xccC\\x14\\xa0\\xb7qQ\"\\xc0{\\x88\\xf7y\\xb1j\\xcd\\x12&2\\x0f\\x89\\x02\\xc3\\x95E.28\\x17\\xb95\\x81\"\\x06\\x82\\xe2\\xfao\\xc3\\xdain\\x9bv\\x14\\xba\\xfa\\x854\\x02\\xdc\\xe9\\x9a\\xf0\\x10'\n"
      ]
     }
    ],
@@ -325,7 +324,7 @@
     "\n",
     "key = RSA.importKey(open(\"/home/student/certs/client-priv-key.rsa\").read())\n",
     "\n",
-    "cipher = PKCS1_v1_5.new(key)\n",
+    "cipher = pkcs_cipher.new(key)\n",
     "\n",
     "partner_encrypted_key = payload['encrypted_key']\n",
     "\n",
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -353,19 +352,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "encrypted hYYVdW7vw15Ec4uCjXt42y-seIc-D0v3jotCSWXIOBF5_gLQnJTCyP6R1hMvdmlgf71VqJxLvjoaReqLUls4NVc7G0pEWR7jMw-W91zsElnr7eZQdreaAKSiaNckfl5HyqqoKFte_An5Lv30T8GXELBphSeASExN4nldZY402lYqOClHEk8IWM_f9MraCYk44-QvVAaDf33VoTK6d19Xdmkijbqb6le2c6WeVikz-Tiln9TAIooGZD0_PF0Aas339f7g7ClSVO0oSjRfRXK5JPNoJfslLgPThEiDJBpt07pWmxyUHfpGBz2U4CAlCAZTXVCn0sesAbpUwECQmuefjvjcssXqVceoUlsUudt_PZ1oaFPpTc1RbM1EFSYaB_MJ9jpu8Elnryc=\n",
+      "encrypted FVfKilhybKa3UPFQ2EWmEbd8bVGBb-_Hp5klsJI6A4sTLhp8L_Q0NdPlGFr1dh5NO_KBZ8Gg4vTwL5NyIxqd1xLO2lQ-aQn6e191XHQuVNmSIlL_mwUNrdXGxanaBRUmIBtURHoShVxcTo27N5qtnedauQWDOi9DlwNSOaeScGQfw7_2eYEzMJpZxtlFN3NNMFriY-4aNqVb9vJyYnAA-NgLu7Tv5mLS9R-1uNpuObOeHS57oR3Mmxn3RQa_U5QfbqRQMDMz0iv6wiUsSUNvKopfgeFDKKMQeZPTeFtuqgGBPUp8Xvc9BSDbAdVxqC2DFH_nWpc_VZvGr20hMJTUevwB43O4-p0WkfVKY4oOaCeLZIL19QFl464YAg4bCnHlGXyehe5Fnrw=\n",
       "\n",
-      "iv:  uF7pRFw1jNnq8DN9PKOYFQ==\n",
+      "iv:  u_m6dz0woczy5NbTais97g==\n",
       "\n",
-      "decoded iv:  b'\\xb8^\\xe9D\\\\5\\x8c\\xd9\\xea\\xf03}<\\xa3\\x98\\x15'\n",
+      "decoded iv:  b'\\xbb\\xf9\\xbaw=0\\xa1\\xcc\\xf2\\xe4\\xd6\\xd3j+=\\xee'\n",
       "\n",
-      "one-time key:  b'Z+KYOhIYkkTU/fdNa5OVpQD2ysqXOEZt6ijKs5+kQiI='\n",
+      "one-time key:  b'l9ZSOyijwJAuyrJ0ZsLvqOq0dePsjsvVEOzWa350STs='\n",
       "\n",
-      "decoded one-time key:  b'g\\xe2\\x98:\\x12\\x18\\x92D\\xd4\\xfd\\xf7Mk\\x93\\x95\\xa5\\x00\\xf6\\xca\\xca\\x978Fm\\xea(\\xca\\xb3\\x9f\\xa4B\"'\n",
+      "decoded one-time key:  b'\\x97\\xd6R;(\\xa3\\xc0\\x90.\\xca\\xb2tf\\xc2\\xef\\xa8\\xea\\xb4u\\xe3\\xec\\x8e\\xcb\\xd5\\x10\\xec\\xd6k~tI;'\n",
       "\n",
       "msg_len: 280\n",
       "\n",
-      "original plain text:  b'{  \"type\": \"artifact\",  \"spec_version\": \"2.1\",  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\",  \"mime_type\": \"application/zip\",  \"payload_bin\": \"ZX7HIBWPQA99NSUhEUgAAADI== ...\",  \"encryption_algorithm\": \"mime-type-indicated\",  \"decryption_key\": \"My voice is my passport\"}B3\\xd3\\xe4\\x98\\x83Xc\\x131\\x88]:U)&'\n",
+      "original plain text:  b'{  \"type\": \"artifact\",  \"spec_version\": \"2.1\",  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\",  \"mime_type\": \"application/zip\",  \"payload_bin\": \"ZX7HIBWPQA99NSUhEUgAAADI== ...\",  \"encryption_algorithm\": \"mime-type-indicated\",  \"decryption_key\": \"My voice is my passport\"}I\\x08\\x94\\xd2A9\\\\\\x15_q\\x01X4\\xa8\\xb1\\xeb'\n",
       "\n",
       "plain text:  b'{  \"type\": \"artifact\",  \"spec_version\": \"2.1\",  \"id\": \"artifact--6f437177-6e48-5cf8-9d9e-872a2bddd641\",  \"mime_type\": \"application/zip\",  \"payload_bin\": \"ZX7HIBWPQA99NSUhEUgAAADI== ...\",  \"encryption_algorithm\": \"mime-type-indicated\",  \"decryption_key\": \"My voice is my passport\"}'\n",
       "\n",
@@ -407,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +415,7 @@
        "b\")\\x15u\\xbf\\x8f\\x80\\x8e\\x94\\xc7|O\\x9aT\\xb5\\x9c\\xdc\\x1eGVbN\\x86\\xdb\\xdf\\x07\\x7ft\\x18\\xfb\\xb6\\xb3\\x17.s\\x88\\x05\\xf6kG\\xa9\\xddC\\x1d|.\\x0bF{\\x9a?,q\\xb5'|@\\x14}\\xf2\\xb4\\xcfHOx\\xcf4\\xff\\xdek`\\xa3\\x83B\\xf6\\x92\\x08\\xc2m\\xb5\\xf6\\x9f\\x95a\\x82\\xc9+\\xe6\\x18\\x803\\x9d\\xa5\\xab\\x04\\x1d\\x07\\x8f\\xe6;\\xb5\\xfaL\\xe8\\x83\\xb3\\xde#\\xb1l\\xa6=/\\x98\\xde\\xe6:\\xed\\x04\\x7f\\xc7\\x9e\\xb4\\ns\\x1e\\xd3&\\x02e\\xd0\\x85\\x06'\\xc3\\x03\\x97J\\x8c\\xdbAx\\xa3\\x06\\xfb\\xac\\xf6W\\xe29\\xd4\\xc6\\xfc\\xc5\\x9d:{\\nSuL\\xb0\\xa8\\xa5\\xd1\\xc5\\xb9\\xdb\\xfd\\xf9\\x82n\\xc9mt\\x91\\x05\\x8d\\xca\\xecf\\xf7\\xa1\\x87\\xe0\\xdbD^\\x8bS\\xa0n\\x13\\xe9\\xdf:92L\\xafG\\xb1)\\xab\\x12x\\x1aP.\\x88D\\xd4OK\\x9c\\xf2\\x9f\\x96\\xfc\\x16c\\x19\\x87\\x1c\\xb4\\x18\\xf9v\\xc0\\x03\\x8e\\xe5\\xffS|\\xc6\\x82\\x04\\xa1\\xd5\\x00\\xddC\\xd0\\xa0\\xeeY\\xd8\\xac\\x83\\x90\\xe4\\xe0Y\\xd6\\xe4L\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -452,11 +451,10 @@
     "-----END PUBLIC KEY-----\n",
     "\n",
     "'''\n",
-    "from Crypto.Signature import PKCS1_v1_5\n",
     "\n",
     "key = RSA.importKey(open('/home/student/certs/server-pub-key.pem').read())\n",
     "h = SHA256.new(plain_text)\n",
-    "verifier = PKCS1_v1_5.new(key)\n",
+    "verifier = pkcs_signature.new(key)\n",
     "\n",
     "\n",
     "if verifier.verify(h, urlsafe_b64decode(signature.encode())):\n",
